--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -49,7 +49,35 @@
             <h5>Au sein de cet article</h5>
          </div>
          <article>
-            <h3 id="d1e272">À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+               <p>Premier texte du recueil, cet article est identifiée par GaliaXXX comme une réécriture
+                  augmentée des articles «&nbsp;Il écrit comme Stendhal&nbsp;» publié en 1955 dans L'ExpressNBP
+                  et «&nbsp;La littérature, aujourd'hui - VI&nbsp;» publié dans le numéro 14 de Tel Quel en 1963NBP.
+                  Outre sa fonction de seuil et d'introduction aux écrits théoriques qui suivent ce
+                  texte place les jalons de la rhétorique de Robbe-Grillet.</p>
+               <p>Se plaignant de la récéption de ses œuvres puis des articles publiés dans L'Express
+                  qui sont depuis devenus le présent recueil, Robbe-Grillet se positionne comme tenant
+                  du bon sens&nbsp;: il n'est pas un théoricien par vocation mais par réaction. Il ne s'agit
+                  pas tant de produire une nouvelle théorie que d'«&nbsp;éclair[er] davantage les éléments
+                  qui avaient été les plus négligés par les critiques, ou les plus distordus&nbsp;», combattre
+                  les «&nbsp;mythes du XIXe siècle&nbsp;» et de «&nbsp;tente[r] de préciser quelques contours&nbsp;». Ce
+                  faisant Robbe-Grillet se place en moderne (hériter d'une tradition vivante qu'il commence
+                  d'esquisser ici) en opposition aux tenants d'une tradition «&nbsp;immobile, figée&nbsp;» voire
+                  «&nbsp;nuisible&nbsp;». Contre les critiques, contre Sartre, Robbe-Grillet défend (non pas «&nbsp;un&nbsp;»)
+                  mais l'«&nbsp;exercice problématique de la littérature&nbsp;» qui constitue, avec le rejet d'une
+                  écriture traditionaliste décriée comme relevant d'un pastiche éculéeNBP et avec la
+                  condamnation d'une critique psychologisante, le premier jalon théorique de l'ouvrage
+                  et une véritable définition du rôle de la littérature complétée au fil du recueil.</p>
+               <p>Notons enfin une technique usuelle chez Robbe-Grillet consistant à vider l'argumentation
+                  en limitant autant que possible la portée de ces écrits théoriques, si l'on aurait
+                  tord de considérer que Robbe-Grillet s'autorise ici à «&nbsp;se contredire&nbsp;», il est assez
+                  juste de constater qu'il prend soin de se dégager un espace entre sa pratique littéraire
+                  et sa pratique théorique dans lequel le lecteur devrait l'autoriser à rafiner sa pensée,
+                  la préciser et sans doute sans rien renier du cheminement lui-même, en retrancher
+                  quelques passages.</p>
+            </details>
+            <h3 id="d1e287">À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
             <p class="first">Je ne suis pas un théoricien du roman. J’ai seulement, comme tous les romanciers sans
                doute, aussi bien du passé que du présent, été amené à faire quelques réflexions critiques
                sur les livres que j’avais écrits, sur ceux que je lisais, sur ceux encore que je
@@ -66,7 +94,7 @@
                écrivain devait garder les yeux fixés.</p>
             <p>Dans les revues, je trouvais souvent plus de sérieux. Mais je ne réussissais pas à
                me satisfaire d’être reconnu, goûté, étudié, par les seuls spécialistes qui m’avaient
-               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;grand public&nbsp;»</span>, je souffrais d’être considéré comme un auteur <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;difficile&nbsp;»</span>. Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
+               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le <span class="quote" onclick="displayExtract('toDefine','0','2',1);">«&nbsp;grand public&nbsp;»</span>, je souffrais d’être considéré comme un auteur <span class="quote" onclick="displayExtract('toDefine','0','2',1);">«&nbsp;difficile&nbsp;»</span>. Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
                tout, par ma formation, des milieux littéraires et de leurs habitudes. Je publiais
                donc, dans un journal politico-littéraire à grand tirage (<span class="STDitalic">L’Express</span>), une série de brefs articles où j’exposais quelques idées qui me semblaient tomber
                sous le sens&nbsp;: disant par exemple que les formes romanesques doivent évoluer pour
@@ -224,12 +252,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -330,6 +366,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
