--- a/04_livrable/website/punr/punr_ch03.html
+++ b/04_livrable/website/punr/punr_ch03.html
@@ -49,17 +49,20 @@
             <h5>Au sein de cet article</h5>
             <h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e664">Sur quelques notions périmées</a></li>
+               <li><a href="#d1e679">Sur quelques notions périmées</a></li>
                <ol>
-                  <li><a href="#d1e755">Le personnage</a></li>
-                  <li><a href="#d1e831">L’histoire</a></li>
-                  <li><a href="#d1e936">L’engagement</a></li>
-                  <li><a href="#d1e1071">La forme et le contenu</a></li>
+                  <li><a href="#d1e770">Le personnage</a></li>
+                  <li><a href="#d1e846">L’histoire</a></li>
+                  <li><a href="#d1e951">L’engagement</a></li>
+                  <li><a href="#d1e1086">La forme et le contenu</a></li>
                </ol>
             </ul>
          </div>
          <article>
-            <h3 id="d1e664">Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e679">Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
             <p class="first">La critique traditionnelle a son vocabulaire. Bien qu’elle se défende beaucoup de
                porter sur la littérature des jugements systématiques (prétendant, au contraire, aimer
                librement telle ou telle œuvre d’après des critères <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;naturels&nbsp;»</span>&nbsp;: le bon sens, le cœur, etc.), il suffit de lire avec un peu d’attention ses analyses
@@ -86,7 +89,7 @@
                <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;avant-garde&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;laboratoire&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;anti-roman&nbsp;»</span>... c’est-à-dire&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fermons les yeux et revenons aux saines valeurs de la tradition française&nbsp;»</span>.</p>
             <div class="smallgap"></div>
             <div id="tit8" type="subsection">
-               <h4 id="d1e755">Le personnage</h4>
+               <h4 id="d1e770">Le personnage</h4>
                <div class="smallgap"></div>
                <p>Nous en a-t-on assez parlé, du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span>&nbsp;! Et ça ne semble, hélas, pas près de finir. Cinquante années de maladie, le constat
                   de son décès enregistré à maintes reprises par les plus sérieux essayistes, rien n’a
@@ -138,7 +141,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit9" type="subsection">
-               <h4 id="d1e831">L’histoire</h4>
+               <h4 id="d1e846">L’histoire</h4>
                <div class="smallgap"></div>
                <p>Un roman, pour la plupart des amateurs&nbsp;–&nbsp;et des critiques&nbsp;–, c’est avant tout une
                   <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;histoire&nbsp;»</span>. Un vrai romancier, c’est celui qui sait <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;raconter une histoire&nbsp;»</span>. Le bonheur de conter, qui le porte d’un bout à l’autre de son ouvrage, s’identifie
@@ -234,7 +237,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit10" type="subsection">
-               <h4 id="d1e936">L’engagement</h4>
+               <h4 id="d1e951">L’engagement</h4>
                <div class="smallgap"></div>
                <p>Puisque raconter pour distraire est futile et que raconter pour faire croire est devenu
                   suspect, le romancier pense apercevoir une autre voie&nbsp;: raconter pour enseigner. Las
@@ -383,7 +386,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit11" type="subsection">
-               <h4 id="d1e1071">La forme et le contenu</h4>
+               <h4 id="d1e1086">La forme et le contenu</h4>
                <div class="smallgap"></div>
                <p>Une chose devrait troubler les partisans du réalisme socialiste, c’est la parfaite
                   ressemblance de leurs arguments, de leur vocabulaire, de leurs valeurs, avec ceux
@@ -528,12 +531,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -634,6 +645,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
