--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -49,7 +49,10 @@
             <h5>Au sein de cet article</h5>
          </div>
          <article>
-            <h3 id="d1e1205"><span class="ref">Nature</span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e1220"><span class="ref">Nature</span>, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
@@ -339,7 +342,7 @@
                séparation entre l’homme et les choses. C’est une querelle d’amour, qui mène au crime
                passionnel. Le monde est accusé de complicité d’assassinat.</p>
             <p>Quand <span class="ref">Sartre</span> écrit (dans <span class="STDitalic">Situations I</span>) que <span class="STDitalic">L’Étranger</span><span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;refuse l’anthropomorphisme&nbsp;»</span>, il nous donne, comme le montrent les citations précédentes, une vue incomplète de
-               l’ouvrage. <span class="ref">Sartre</span> a sans doute remarqué ces passages, mais il pense que <span class="ref">Camus</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;infidèle <a id="page_71"></a>à son principe, fait de la poésie&nbsp;»</span>. Ne peut-on pas dire, plutôt, que ces métaphores sont justement l’explication du
+               l’ouvrage. <span class="ref">Sartre</span> a sans doute remarqué ces passages, mais il pense que <span class="ref">Camus</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;infidèle <span id="page_71" class="STDgray STDsmall pb">[71]</span>à son principe, fait de la poésie&nbsp;»</span>. Ne peut-on pas dire, plutôt, que ces métaphores sont justement l’explication du
                livre&nbsp;? <span class="ref">Camus</span> ne refuse pas l’anthropomorphisme, il s’en sert avec économie et subtilité, pour
                lui donner plus de poids.</p>
             <p>Tout est dans l’ordre, puisqu’il s’agit, en fin de compte, ainsi que <span class="ref">Sartre</span> le note, de nous exposer, suivant le mot de <span class="ref">Pascal</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;le malheur naturel de notre condition&nbsp;»</span>.</p>
@@ -373,7 +376,7 @@
                   se rejoignent et reconstituent les bretelles.&nbsp;»</span> Et le lecteur continuera d’ignorer la forme de celles-ci. Plus loin, au jardin public,
                la fameuse racine du marronnier finit par concentrer toute son absurdité et son hypocrisie
                dans sa couleur noire&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Noire&nbsp;? J’ai senti le mot qui se dégonflait, qui se vidait de son sens avec une
-                  rapidité extraordinaire. Noire&nbsp;? La racine n’était pas noire, ce n’était pas du noir qu’il <a id="page_73"></a>y avait sur ce morceau de bois... mais plutôt l’effort confus pour imaginer du noir
+                  rapidité extraordinaire. Noire&nbsp;? La racine n’était pas noire, ce n’était pas du noir qu’il <span id="page_73" class="STDgray STDsmall pb">[73]</span>y avait sur ce morceau de bois... mais plutôt l’effort confus pour imaginer du noir
                   de quelqu’un qui n’en aurait jamais vu et qui n’aurait pas su s’arrêter, qui aurait
                   imaginé un être ambigu, par-delà les couleurs.&nbsp;»</span> Et Roquentin commente lui-même&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Les couleurs, les saveurs, les odeurs n’étaient jamais vraies, jamais tout bonnement
                   elles-mêmes et rien qu’elles-mêmes.&nbsp;»</span></p>
@@ -526,7 +529,7 @@
                de l’enfermer dans son mal. Je n’ai rien à perdre. Ce pari, en tout état de cause,
                est le seul raisonnable.</p>
             <p>J’ai dit que je ne possédais aucune preuve. Il est facile de m’apercevoir, cependant,
-               que la <span class="STDitalic">tragification <a id="page_83"></a></span>systématique de l’univers où je vis est souvent le résultat d’une volonté délibérée.
+               que la <span class="STDitalic">tragification <span id="page_83" class="STDgray STDsmall pb">[83]</span></span>systématique de l’univers où je vis est souvent le résultat d’une volonté délibérée.
                Cela suffit à jeter le doute sur toute proposition tendant à poser la tragédie comme
                naturelle et définitive. Or, du moment que le doute est apparu, je ne peux faire autrement
                que de chercher plus loin.</p>
@@ -567,12 +570,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -673,6 +684,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
