--- a/04_livrable/website/punr/punr_ch08.html
+++ b/04_livrable/website/punr/punr_ch08.html
@@ -49,7 +49,10 @@
             <h5>Au sein de cet article</h5>
          </div>
          <article>
-            <h3 id="d1e2339">Joë&nbsp;Bousquet le rêveur<br><span class="STDsmall">(1953)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e2354">Joë&nbsp;Bousquet le rêveur<br><span class="STDsmall">(1953)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">
                <p>Un homme se connaissait comme le produit de ce monde. Il a voulu en devenir la conscience&nbsp;:
                   une façon de rêver qu’il en incarnerait le salut.</p>
@@ -113,7 +116,7 @@
                   et convenu que la résolution de l’attribuer à ma mémoire...</span></p>
             <p><span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Mon expérience de prisonnier m’a édifié&nbsp;; libre, j’engendrais l’étendue où je croyais
                   me déplacer comme un objet. Immobilisé, je me suis aperçu que le battement de mon
-                  cœur créait sans relâche l’espace <a id="page_105"></a>où si souvent j’avais cru reconnaître le décor stéréotypé de mon enfance. Eussé-je
+                  cœur créait sans relâche l’espace <span id="page_105" class="STDgray STDsmall pb">[105]</span>où si souvent j’avais cru reconnaître le décor stéréotypé de mon enfance. Eussé-je
                   conservé mes jambes, j’aurais mobilisé de loin le versant boisé d’une promenade et
                   dissous dans l’effort de l’escalade la sensation que le battement de mon sang en distribuait
                   les reliefs, sur la pente docile de mon champ visuel. Maintenant je saisis mieux l’opération
@@ -201,7 +204,7 @@
             <p>Nous voici revenus sans conteste sur terre&nbsp;: ce sont bien les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objets du jour&nbsp;»</span> qu’il nous faut recueillir, et la netteté admirable entrevue tout à l’heure pendant
                un instant est, en réalité, la leur... Du moins elle <span class="STDitalic">doit</span> l’être. C’est pour l’acquérir qu’ils réclament notre concours.</p>
             <p><span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;N’imite pas le réel, collabore avec lui. Mets tes pensées et tes dons d’expression
-                  au service des jours <a id="page_111"></a>et des faits qui les distinguent, asservis-toi à l’existence des choses, si tu n’es
+                  au service des jours <span id="page_111" class="STDgray STDsmall pb">[111]</span>et des faits qui les distinguent, asservis-toi à l’existence des choses, si tu n’es
                   pas ce qui leur manque tu n’es rien, tu enrichiras ce qui est de ce qui en était en
                   toi le pressentiment.&nbsp;»</span></p>
             <p>Le rêve n’est que cela&nbsp;: le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;pressentiment&nbsp;»</span> de ce que sera le monde réel quand notre esprit aura donné sa forme définitive à
@@ -248,7 +251,7 @@
                   un monde refroidi, ils adhèrent cependant pour une période très courte à des vœux
                   que nous formions à leur propos. On dirait qu’ils se sont rencontrés en nous cherchant
                   et, tout en se pliant à des lois physiques, se sont, loin de nous, arrangés déjà à
-                  la manière d’un rêve. Enfin, <a id="page_114"></a>ils ont été notre souvenir avant de nous être aventure.&nbsp;»</span></p>
+                  la manière d’un rêve. Enfin, <span id="page_114" class="STDgray STDsmall pb">[114]</span>ils ont été notre souvenir avant de nous être aventure.&nbsp;»</span></p>
             <p>Sans doute la plus sérieuse conquête du surréalisme aura-t-elle été de rendre, par
                une recherche systématique, aux <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;miracles apparents qui jettent un doute si vif sur la vision commune du réel&nbsp;»</span> toute leur valeur et tout leur poids&nbsp;: ceux de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gages évidents d’un ordre inconnu&nbsp;»</span>&nbsp;; c’est en les dépistant sans faiblesse que nous entrerons <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;dans le château de chaque instant.&nbsp;»</span> Il est vain, en revanche, d’user ses forces à <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;rapprocher arbitrairement un fer à repasser et un faux-col en celluloïd&nbsp;»</span>&nbsp;; <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;l’impossibilité de trouver jamais du gratuit dans les rapports les plus hasardeux&nbsp;»</span> nous dispense de ces amusements, le monde quotidien offre assez de richesses pour
                que nous puissions nous tenir à l’écart des extravagances. Les phénomènes les plus
@@ -278,7 +281,7 @@
                   Franchement je le crois. Nous sommes l’être à l’état de chute, de l’être en exil,
                   aussi éloignés de la vie que le froid mortel à qui appartient cependant le privilège
                   de purifier l’atmosphère et de donner la cohérence et la solidité à une masse d’eau.
-                  J’ai compris. Je veux <a id="page_116"></a>recueillir mon néant à l’ombre d’une réalité digne de la lumière et forger de mes
+                  J’ai compris. Je veux <span id="page_116" class="STDgray STDsmall pb">[116]</span>recueillir mon néant à l’ombre d’une réalité digne de la lumière et forger de mes
                   mains un objet qui efface mes traces.&nbsp;»</span></p>
             <p>Un texte <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;serré et irréductible&nbsp;»</span>, si parfait qu’il ne semble pas <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;avoir été touché&nbsp;»</span>, un objet si parfait qu’il effacerait nos traces... Ne reconnaissons-nous pas ici
                la plus haute ambition de tout écrivain&nbsp;?</p>
@@ -335,12 +338,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -441,6 +452,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
