--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -49,7 +49,10 @@
             <h5>Au sein de cet article</h5>
          </div>
          <article>
-            <h3 id="d1e3564">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e3579">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
                   merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget</span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
@@ -93,7 +96,7 @@
                qu’il n’est malheureusement pas possible d’analyser ici&nbsp;; aussi, lorsque interviennent
                ensuite les deux romanciers et le receveur des postes, qui tous les trois prétendent
                ouvertement <span class="STDitalic">écrire l’histoire,</span> celle-ci dépasse à l’instant avec allégresse les bornes de l’incompréhensible. En désespoir de cause,
-               Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span class="quote" onclick="displayExtract('pr_01_xx','2','0',1);">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
+               Mahu rentre chez soi, débarrassé enfin&nbsp;–&nbsp;croit-il&nbsp;–&nbsp;de tout ce fatras de <span class="quote" onclick="displayExtract('pr_01_114','2','4',1);">«&nbsp;personnages mous&nbsp;»</span>. Les cent dernières pages du livre ne sont plus que du matériau à l’état brut, brefs
                morceaux de réalité décomposée qui se révèlent au moins aussi curieux que tout ce
                qui précédait, aussi riches, aussi passionnants&nbsp;: des mots qui tombent du ciel sans
                laisser de traces, des enfants qui parlent <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;à l’envers&nbsp;»</span>, un petit bout d’oreille qui bouge près d’une colonne dans une réunion publique...
@@ -105,7 +108,7 @@
                insistance&nbsp;: <span class="quote" onclick="displayExtract('pr_02_09','2','0',1);">«&nbsp;On m’a piqué avec une longue aiguille...&nbsp;»</span> Il faut préciser&nbsp;: <span class="quote" onclick="displayExtract('pr_02_16','2','0',1);">«&nbsp;La naissance d’un objet, j’ai remarqué, n’a pas lieu aujourd’hui, il y a du mouvement
                   tout autour qui l’empêche de montrer la tête et demain tu t’avises qu’il existe. Par
                   conséquent la meilleure explication des origines serait de commencer par des bruits
-                  de bouche et de glisser progressivement vers des paroles <a id="page_139"></a>articulées jusqu’au moment où l’auditeur sans se poser aucune question participe à
+                  de bouche et de glisser progressivement vers des paroles <span id="page_139" class="STDgray STDsmall pb">[139]</span>articulées jusqu’au moment où l’auditeur sans se poser aucune question participe à
                   ton histoire.&nbsp;»</span> C’est justement ce qui se produit ici&nbsp;; peu à peu, au milieu des digressions et des
                faillites, une tache de couleur rousse s’impose dans le tableau (les héros font de
                la peinture dans <span class="STDitalic">Le Renard,</span> comme ils écrivaient des romans dans <span class="STDitalic">Mahu</span>). Cette masse d’abord indistincte prend bientôt la forme d’un renard, qui se dédouble
@@ -113,7 +116,7 @@
                invente un voyage, un voyage en Israël. Suit une espèce de <span class="quote" onclick="displayExtract('pr_02_120','2','1',1);">reportage sur la vie dans les kibboutsim,</span> interrompu çà et là par des <span class="quote" onclick="displayExtract('pr_02_toDefine','2','1',1);">évocations bibliques</span> ou autres, des apparitions des pharaons et de sultans, des rencontres plus imprévues
                encore&nbsp;–&nbsp;celles par exemple de <span class="quote" onclick="displayExtract('pr_02_25','2','1',1);displayExtract('pr_02_51','2','1',0);">Don Quichotte</span> et de son désert castillan. Le documentaire traîne en longueur, dans la chaleur de
                l’été palestinien. Le narrateur s’inquiète de cette lassitude qu’il constate chez
-               le lecteur et chez lui-même, comme chez ses voyageurs&nbsp;: <span class="quote" onclick="displayExtract('unknown0','2','0',1);">«&nbsp;Ça ne va pas, dit-il, seraient-ils déjà revenus&nbsp;?&nbsp;»</span> Pourtant Renard et David <span class="quote" onclick="displayExtract('pr_02_175','2','1',1);">font encore la connaissance de Marie-Madeleine</span>, dite <span class="quote" onclick="displayExtract('pr_02_178','2','0',1);">«&nbsp;Mama&nbsp;»</span>, qui les aidera à se rembarquer, puis celle plus importante du Scribe accroupi&nbsp;:
+               le lecteur et chez lui-même, comme chez ses voyageurs&nbsp;: <span class="quote" onclick="displayExtract('pr_02_150','2','0',1);">«&nbsp;Ça ne va pas, dit-il, seraient-ils déjà revenus&nbsp;?&nbsp;»</span> Pourtant Renard et David <span class="quote" onclick="displayExtract('pr_02_175','2','1',1);">font encore la connaissance de Marie-Madeleine</span>, dite <span class="quote" onclick="displayExtract('pr_02_178','2','0',1);">«&nbsp;Mama&nbsp;»</span>, qui les aidera à se rembarquer, puis celle plus importante du Scribe accroupi&nbsp;:
                <span class="quote" onclick="displayExtract('pr_02_180','2','0',1);">«&nbsp;Méfiez-vous... Ne lui parlez pas, il écrit tout.&nbsp;»</span> En effet il note aussitôt lui-même sa propre rencontre... <span class="quote" onclick="displayExtract('pr_02_180','2','0',1);">«&nbsp;Un fait, un fait entre des milliards, on leur dénie toute valeur dans la pratique,
                   on les note, on les note c’est tout.&nbsp;»</span></p>
             <p>Et le plus naturellement du monde, Renard, qui s’est depuis longtemps confondu avec
@@ -159,12 +162,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -265,6 +276,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
