--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -49,20 +49,23 @@
             <h5>Au sein de cet article</h5>
             <h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e3736">Nouveau roman, homme nouveau</a></li>
+               <li><a href="#d1e3752">Nouveau roman, homme nouveau</a></li>
                <ol>
-                  <li><a href="#d1e3757">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
-                  <li><a href="#d1e3793">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
-                  <li><a href="#d1e3856">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
-                  <li><a href="#d1e3880">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
-                  <li><a href="#d1e3909">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
-                  <li><a href="#d1e3924">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
-                  <li><a href="#d1e3942">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
+                  <li><a href="#d1e3773">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</a></li>
+                  <li><a href="#d1e3809">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</a></li>
+                  <li><a href="#d1e3872">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</a></li>
+                  <li><a href="#d1e3896">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</a></li>
+                  <li><a href="#d1e3925">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</a></li>
+                  <li><a href="#d1e3940">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</a></li>
+                  <li><a href="#d1e3958">Le seul engagement possible, pour l’écrivain, c’est la littérature.</a></li>
                </ol>
             </ul>
          </div>
          <article>
-            <h3 id="d1e3736">Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e3752">Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
             <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
@@ -89,7 +92,7 @@
                qu’il serait plus raisonnable de dire&nbsp;:</p>
             <div class="smallgap"></div>
             <div id="" type="subsection">
-               <h4 id="d1e3757">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
+               <h4 id="d1e3773">Le Nouveau&nbsp;Roman n’est pas une théorie, c’est une recherche.</h4>
                <div class="smallgap"></div>
                <p>Il n’a donc codifié aucune loi. Ce qui fait qu’il ne s’agit pas d’une école littéraire
                   au sens étroit du terme. Nous sommes les premiers à savoir qu’il y a entre nos œuvres
@@ -117,7 +120,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3793">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
+               <h4 id="d1e3809">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
                <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
                   définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac</span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal</span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
@@ -139,7 +142,7 @@
                   et des vieilles normes.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3856">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
+               <h4 id="d1e3872">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
                <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
@@ -164,7 +167,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3880">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
+               <h4 id="d1e3896">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
                   chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
@@ -187,7 +190,7 @@
                   idées toutes faites, en littérature comme dans la vie.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3909">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
+               <h4 id="d1e3925">Le Nouveau&nbsp;Roman s’adresse à tous les hommes de bonne foi.</h4>
                <div class="smallgap"></div>
                <p>Car il s’agit ici d’expérience vécue, et non des schémas rassurants&nbsp;–&nbsp;et désespérants
                   tout à la fois&nbsp;–&nbsp;qui tentent de limiter les dégâts et d’assigner un ordre conventionnel
@@ -208,7 +211,7 @@
                   de leur existence, les aideront à y voir plus clair.</p>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3924">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
+               <h4 id="d1e3940">Le Nouveau&nbsp;Roman ne propose pas de signification toute faite.</h4>
                <div class="smallgap"></div>
                <p>Et l’on arrive à la grande question&nbsp;: notre vie a-t-elle un sens&nbsp;? Quel est-il&nbsp;? Quelle
                   est la place de l’homme sur la terre&nbsp;? On voit tout de suite pourquoi les objets balzaciens
@@ -238,7 +241,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="" type="subsection">
-               <h4 id="d1e3942">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
+               <h4 id="d1e3958">Le seul engagement possible, pour l’écrivain, c’est la littérature.</h4>
                <div class="smallgap"></div>
                <p>Il n’est pas raisonnable, dès lors, de prétendre dans nos romans servir une cause
                   politique, même une cause qui nous paraît juste, même si dans notre vie politique
@@ -286,12 +289,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -392,6 +403,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
