--- a/04_livrable/website/punr/punr_ch07.html
+++ b/04_livrable/website/punr/punr_ch07.html
@@ -49,7 +49,10 @@
             <h5>Au sein de cet article</h5>
          </div>
          <article>
-            <h3 id="d1e2238">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
+            <details>
+               <summary>Introduction</summary>
+            </details>
+            <h3 id="d1e2253">La conscience malade de Zeno<br><span class="STDsmall">(1954)</span></h3>
             <p class="first">Zeno Cosini, riche négociant triestin (le Trieste autrichien d’avant la guerre de&nbsp;14),
                rédige pour un psychanalyste les faits principaux de son existence passée. Études
                universitaires incertaines, mort du père, passion volontairement éprouvée pour une
@@ -116,7 +119,7 @@
                ou de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
                elle commencera par la gangrène des membres inférieurs. Il n’est pas jusqu’à cette
                ville <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
-               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession <a id="page_99"></a>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
+               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession <span id="page_99" class="STDgray STDsmall pb">[99]</span>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
                   que nous mentons&nbsp;!&nbsp;»</span></p>
             <p>Par surcroît, le narrateur est de mauvaise foi. En présentant son récit, le psychanalyste
                précise qu’il contient une bonne quantité de mensonges. Zeno lui-même en signale quelques-uns
@@ -181,12 +184,20 @@
                   dire que c'était Petite-Fiente qui le lui avait dit.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
-            <div id="pr_01_xx" class="extractHide">
+            <div id="pr_01_114" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
                <p class="editor">Cette citation n'a pas pu être identifié. On trouve cependant deux chapitres intitulés
                   «&nbsp;l'horizon mou&nbsp;» (partie 1 et 2). Dans le premier, le protagoniste nous révèle l'existence
-                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits.</p>
-               <p class="editor">L'idée de personnage mou semble davantage inspiré par le passage p.&nbsp;XXX</p>
+                  du journal de Lorpailleur intitulé ainsi, le second en semble être des extraits. Cependant
+                  cette idée de personnage mou semble davantage un commentaire qu'une citation inspiré
+                  par le passage pp.&nbsp;114-115</p>
+               <p><span class="STDsmall STDgray">[114] </span>[...] Je me disais&nbsp;: s'ils se rendaient compte qu'ils sont en équilibre, s'ils sentaient
+                  sans arrêt l'effort de leurs pieds, de leurs jambes, de leur dos, de leur cou&nbsp;? J'ai
+                  l'idée qu'ils ne pourraient plus se tenir debout. Ça les fatiguerait. Pour les réunions
+                  ce serait embêtant. Plus personne pour écouter. Les orateurs maudiraient l'équilibre
+                  obligatoire. Parce qu'on en revient toujours là&nbsp;: aussitôt<span class="STDsmall STDgray">[115] </span> qu'on se sait obligé on abandonne. Moi c'est comme ça. C'est pour ça, je pense qu'on
+                  ne parle jaamis aux types de leur équilibre. Note que même assis sur des chaises ce
+                  serait pareil. L'effort est un peu moins grand, mais les oreilles naviguent.</p>
                <p class="editor"><span class="STDitalic">Mahu ou le matériau</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1952] 2000.</p>
             </div>
             <div id="pr_01_184" class="extractHide">
@@ -287,6 +298,26 @@
                   mais l'art est si grand qu'aucune modulations n'échappe, aucune. Vive Cervantès. Nous
                   laissions l'Espagne très loin derrière nous. Si j'avais su je serais retourné en Espagne.
                   Mal connue. Jusqu'à Tolède seulement.</p>
+               <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
+            </div>
+            <div id="pr_02_150" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p class="editor">Après ce que l'on considererait comme une énième digression, Reanrd et David rencontre
+                  un marchand, lequel semble mécontent de ne pouvoir conclure le moindre marché avec
+                  eux.</p>
+               <p><span class="STDsmall STDgray">[150] </span>[...] Renard le devine et poliment&nbsp;:</p>
+               <p>- Je compte en acheter, monsieur, n'est-ce pas, David&nbsp;?</p>
+               <p>- Hein&nbsp;? Oui oui certainement.</p>
+               <p>- Voulez-vous nous remettre cette danse s'il vous plaît. Comment s'appelle-t-elle&nbsp;?
+                  Très belle vraiment. N'est-ce pas David&nbsp;?</p>
+               <p>- Incomparable.</p>
+               <p>Ça ne va pas. Seraient-ils déjà revenus&nbsp;? Pourtant non, je cherche mal, l'hiver ici
+                  a gelé l'été là-bas, le temps de faire du feu, de s'habituer, je les rattraperai au
+                  tournant. Bistro. «&nbsp;Il s'occupe des dolmens, pas des domaines, des dolmens, il est
+                  breton. - Ah&nbsp;? - Oui. Qu'est-ce qu'on a fait je ne sais pas, on a bavardé, j'ai remis
+                  de l'eau dans ma voiture. Oh, une bien bonne&nbsp;: on se promenait en troufions, quatre
+                  ou cinq, on débouche à l'angle d'une rue sur des femmes en sens contraire, tu ne sais
+                  pas ce qu'elles ont dit&nbsp;? «&nbsp;Quelle horreur des militaires&nbsp;» Je n'entends pas tout.</p>
                <p class="editor"><span class="STDitalic">Le Renard et la boussole</span>, Pinget Robert, Paris, Les Éditions de Minuit, [1953] 2000.</p>
             </div>
             <div id="pr_02_175" class="extractHide">
